--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
                             <i class="fa fa-award text-primary"></i>
                         </div>
                         <div class="ps-4">
-                            <h5 class="text-white mb-0">Converted covered</h5>
-                            <h1 class="text-white mb-0" data-toggle="counter-up">145</h1>
+                            <h5 class="text-white mb-0">Connectors covered</h5>
+                            <h1 class="text-white mb-0" data-toggle="counter-up">456</h1>
                         </div>
                     </div>
                 </div>
@@ -197,7 +197,7 @@
                             <div class="bg-primary rounded d-flex align-items-center justify-content-center mb-3" style="width: 60px; height: 60px;">
                                 <i class="fa fa-award text-white"></i>
                             </div>
-                            <h4>ATested on over 3,000 APIs</h4>
+                            <h4>Tested on over 3,000 APIs</h4>
                             <p class="mb-0">With a proven track record, our tool has been rigorously tested on over 3,000 APIs to ensure accuracy, reliability, and seamless conversions, giving you peace of mind for all your projects.</p>
                         </div>
                     </div>
@@ -239,8 +239,8 @@
             <div class="row g-5">
                 <div class="col-lg-7">
                     <div class="section-title position-relative pb-3 mb-5">
-                        <h5 class="fw-bold text-primary text-uppercase">Request A Quote</h5>
-                        <h1 class="mb-0">Need A Free Quote? Please Feel Free to Contact Us</h1>
+                        <h5 class="fw-bold text-primary text-uppercase">Request Demo</h5>
+                        <h1 class="mb-0">Please Feel Free to Contact Us</h1>
                     </div>
 
                 </div>
@@ -258,10 +258,10 @@
                                     <input type="email" class="form-control bg-light border-0" placeholder="Organization Name" style="height: 55px;">
                                 </div>
                                 <div class="col-12">
-                                    <textarea class="form-control bg-light border-0" rows="3" placeholder="Requirement"></textarea>
+                                    <textarea class="form-control bg-light border-0" rows="3" placeholder="Requirement "></textarea>
                                 </div>
                                 <div class="col-12">
-                                    <button class="btn btn-dark w-100 py-3" type="submit">Request A Quote</button>
+                                    <button class="btn btn-dark w-100 py-3" type="submit">Request Call</button>
                                 </div>
                             </div>
                         </form>
