--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="row gx-0">
             <div class="col-lg-8 text-center text-lg-start mb-2 mb-lg-0">
                 <div class="d-inline-flex align-items-center" style="height: 45px;">
-                    <small class="me-3 text-light"><i class="fa fa-map-marker-alt me-2"></i>Kharadi, Pune</small>
+                    <small class="me-3 text-light"><i class="fa fa-map-marker-alt me-2"></i>Pune, IN</small>
                     <small class="text-light"><i class="fa fa-envelope-open me-2"></i>contact@aaryati.com</small>
                 </div>
             </div>
