Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <a class="btn btn-sm btn-outline-light btn-sm-square rounded-circle me-2" href=""><i class="fab fa-facebook-f fw-normal"></i></a>
                     <a class="btn btn-sm btn-outline-light btn-sm-square rounded-circle me-2" href="https://www.linkedin.com/company/aaryati/"><i class="fab fa-linkedin-in fw-normal"></i></a>
                     <!--a class="btn btn-sm btn-outline-light btn-sm-square rounded-circle me-2" href=""><i class="fab fa-instagram fw-normal"></i></a-->
-                    <a class="btn btn-sm btn-outline-light btn-sm-square rounded-circle" href=""><i class="fab fa-youtube fw-normal"></i></a>
+                    <a class="btn btn-sm btn-outline-light btn-sm-square" href=""><i class="fab fa-youtube fw-normal"></i></a>
                 </div>
             </div>
         </div>
@@ -95,7 +95,7 @@
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
                             <h5 class="text-white text-uppercase mb-3 animated slideInDown">Revolutionize Code Transformation</h5>
-                            <h1 class="display-1 text-white mb-md-1 animated zoomIn">Effortless Mulesoft Code Conversion</h1>
+                            <h3 class="gradient-text text-white mb-3 animated zoomIn">Effortless Mulesoft Code Conversion</h3>
                             <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Request Demo</a>
                             <a href="" class="btn btn-outline-light py-md-3 px-md-5 animated slideInRight">Contact Us</a>
                         </div>
@@ -105,8 +105,8 @@
                     <img class="w-100" src="img/carousel-2.jpg" alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
-                            <h5 class="text-white text-uppercase mb-3 animated slideInDown">Zorrya - Shop Smart, Buy Local</h5>
-                            <h5 class="display-1 text-white mb-md-4 animated zoomIn">Compare online prices, buy offline. <br>Zorrya brings local stores to your fingertips.</h5><br></h5>
+                            <h5 class="gradient-text text-white text-uppercase mb-3 animated slideInDown">Zorrya - Shop Smart, Buy Local</h5>
+                            <h5 class="text-white  mb-3 animated zoomIn">Compare online prices, buy offline. <br>Zorrya brings local stores to your fingertips.</h5><br></h5>
 
                         </div>
                     </div>
@@ -141,7 +141,7 @@
                         </div>
                         <div class="ps-4">
                             <h5 class="text-white mb-0">Mulesoft to Springboot code conversion automation %</h5>
-                            <h1 class="text-white mb-0" data-toggle="counter-up">83</h1>
+                            <h1  class=" gradient-text text-white mb-0" data-toggle="counter-up">83</h1>
                         </div>
                     </div>
                 </div>
@@ -152,7 +152,7 @@
                         </div>
                         <div class="ps-4">
                             <h5 class="text-primary mb-0">Projects Completed</h5>
-                            <h1 class="mb-0" data-toggle="counter-up">3</h1>
+                            <h1 class="gradient-text mb-0" data-toggle="counter-up">3</h1>
                         </div>
                     </div>
                 </div>
@@ -163,7 +163,7 @@
                         </div>
                         <div class="ps-4">
                             <h5 class="text-white mb-0">Converted covered</h5>
-                            <h1 class="text-white mb-0" data-toggle="counter-up">145</h1>
+                            <h1 class=" gradient-text text-white mb-0" data-toggle="counter-up">145</h1>
                         </div>
                     </div>
                 </div>
