stopped the transition

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                </div>
         </nav>
 
-        <div id="header-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
+        <div id="header-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="false">
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img class="w-100" src="img/spring-boot.png" alt="Image">
@@ -106,7 +106,7 @@
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
                             <h5 class="text-white text-uppercase mb-3 animated slideInDown">Zorrya - Shop Smart, Buy Local</h5>
-                            <h5 class="display-1 text-white mb-md-4 animated zoomIn">Compare online prices, buy offline. <br>Zorrya brings local stores to your fingertips.</h5><br></h5>
+                            <h5 class="display-1 text-white mb-md-4 animated zoomIn">Comming Soon ..  </h5><br></h5>
 
                         </div>
                     </div>
