--- a/client/index.html
+++ b/client/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FXPTVG80EJ"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-FXPTVG80EJ');
+    </script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
     <title>Aaryati Technologies - Mulesoft to Spring Boot Conversion</title>
-    <meta name="description" content="Transform your MuleSoft applications to Spring Boot with our automated conversion platform. Our industry-leading solution ensures a smooth migration with minimal manual intervention." />
-    
+    <meta name="description" content="Migrate MuleSoft apps to Spring Boot effortlessly with our automated tool. Achieve fast, accurate conversions and reduce manual work in your modernization journey." />
+    <link rel="canonical" href="https://aaryati.com/" />
     <!-- Open Graph tags for social sharing -->
     <meta property="og:title" content="Aaryati Technologies - Mulesoft to Spring Boot Conversion" />
     <meta property="og:description" content="Transform your MuleSoft applications to Spring Boot with our automated conversion platform." />
